@@ -284,6 +284,7 @@ ROW   |354          |10084 |Security          |
 ROW   |355          |10084 |Zabbix agent      |
 ROW   |345          |10084 |Zabbix server     |
 ROW   |434          |10088 |Clusters          |
+ROW   |458          |10088 |General           |
 ROW   |433          |10088 |Log               |
 ROW   |408          |10089 |CPU               |
 ROW   |435          |10089 |Disks             |
@@ -863,6 +864,8 @@ ROW   |23654 |3   |                 |                                           
 ROW   |23655 |3   |                 |                                                         |10104 |ICMP ping                                                        |icmpping                                                                       |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |1         |          |                                                                                    |                |0        |0       |           |           |         |          |0    |                                                |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |
 ROW   |23656 |3   |                 |                                                         |10104 |ICMP response time                                               |icmppingsec                                                                    |60   |7      |365   |0     |0         |             |s       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |                                                |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |
 ROW   |23657 |3   |                 |                                                         |10104 |ICMP loss                                                        |icmppingloss                                                                   |60   |7      |365   |0     |0         |             |%       |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |                                                |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |
+ROW   |23658 |3   |                 |                                                         |10088 |Full name                                                        |vmware.fullname[{$URL}]                                                        |3600 |90     |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |                                                |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |
+ROW   |23659 |3   |                 |                                                         |10088 |Version                                                          |vmware.version[{$URL}]                                                         |3600 |90     |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |NULL      |NULL      |          |                                                                                    |                |0        |0       |{$USERNAME}|{$PASSWORD}|         |          |0    |                                                |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |30      |0                  |0                  |                  |
 ROW   |10020 |0   |                 |                                                         |10001 |Agent ping                                                       |agent.ping                                                                     |60   |7      |365   |0     |3         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22232     |10        |          |                                                                                    |                |0        |0       |           |           |         |          |0    |                                                |NULL       |    |The agent always returns 1 for this item. It could be used in combination with nodata() for availability check.                                                                                                                                                                                                                                                                                                                           |0             |0       |0                  |0                  |                  |
 ROW   |10059 |0   |                 |                                                         |10001 |Version of zabbix_agent(d) running                               |agent.version                                                                  |3600 |7      |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22231     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |                                                |NULL       |    |                                                                                                                                                                                                                                                                                                                                                                                                                                          |0             |0       |0                  |0                  |                  |
 ROW   |22715 |4   |{$SNMP_COMMUNITY}|SNMPv2-MIB::sysContact.0                                 |10066 |Device contact details                                           |sysContact                                                                     |3600 |7      |365   |0     |1         |             |        |0         |0    |                   |0                   |                     |                     |1      |          |22713     |NULL      |          |                                                                                    |                |0        |0       |           |           |         |          |0    |                                                |NULL       |    |The textual identification of the contact person for this managed node, together with information on how to contact this person.  If no contact information is known, the value is the zero-length string.                                                                                                                                                                                                                                |23            |0       |0                  |0                  |                  |
@@ -3057,6 +3060,8 @@ ROW   |5869     |456          |23654 |
 ROW   |5870     |457          |23655 |
 ROW   |5871     |457          |23656 |
 ROW   |5872     |457          |23657 |
+ROW   |5873     |458          |23658 |
+ROW   |5874     |458          |23659 |
 
 TABLE |mappings
 FIELDS|mappingid|valuemapid|value|newvalue          |
