@@ -126,6 +126,9 @@ typedef struct
 	/* The last vmware service access time. If a service is not accessed for a day it is removed */
 	int			lastaccess;
 
+	/* the vmware service instance contents */
+	char			*contents;
+
 	/* The service data object that is swapped with a new one during service update */
 	zbx_vmware_data_t	*data;
 }
